removed sonargraph maven plugin

--- a/pom.xml
+++ b/pom.xml
@@ -54,48 +54,48 @@
                 <!--</executions>-->
             <!--</plugin>-->
 
-            <plugin>
-                <groupId>com.hello2morrow</groupId>
-                <artifactId>sonargraph-maven-plugin</artifactId>
-                <version>8.7.0</version>
-                <configuration>
-                    <installationDirectory>../..</installationDirectory>
-                    <systemDirectory>${basedir}/SpringExample.sonargraph</systemDirectory>
-                    <failSet>
-                        <failOnEmptyWorkspace>false</failOnEmptyWorkspace>
-                        <includes>
-                            <include>
-                                <issueType>any</issueType>
-                                <severity>error</severity>
-                                <resolution>none</resolution>
-                            </include>
-                            <include>
-                                <issueType>ArchitectureViolation</issueType>
-                            </include>
-                            <include>
-                                <issueType>any</issueType>
-                                <severity>warning</severity>
-                            </include>
-                        </includes>
-                        <excludes>
-                            <exclude>
-                                <issueType>ScriptCompilationError</issueType>
-                                <resolution>none</resolution>
-                            </exclude>
-                            <exclude>
-                                <issueType>ThresholdViolation</issueType>
-                            </exclude>
-                        </excludes>
-                    </failSet>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>create-report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>com.hello2morrow</groupId>-->
+                <!--<artifactId>sonargraph-maven-plugin</artifactId>-->
+                <!--<version>7.2.3</version>-->
+                <!--<configuration>-->
+                    <!--<installationDirectory>../..</installationDirectory>-->
+                    <!--<systemDirectory>${basedir}/SpringExample.sonargraph</systemDirectory>-->
+                    <!--<failSet>-->
+                        <!--<failOnEmptyWorkspace>false</failOnEmptyWorkspace>-->
+                        <!--<includes>-->
+                            <!--<include>-->
+                                <!--<issueType>any</issueType>-->
+                                <!--<severity>error</severity>-->
+                                <!--<resolution>none</resolution>-->
+                            <!--</include>-->
+                            <!--<include>-->
+                                <!--<issueType>ArchitectureViolation</issueType>-->
+                            <!--</include>-->
+                            <!--<include>-->
+                                <!--<issueType>any</issueType>-->
+                                <!--<severity>warning</severity>-->
+                            <!--</include>-->
+                        <!--</includes>-->
+                        <!--<excludes>-->
+                            <!--<exclude>-->
+                                <!--<issueType>ScriptCompilationError</issueType>-->
+                                <!--<resolution>none</resolution>-->
+                            <!--</exclude>-->
+                            <!--<exclude>-->
+                                <!--<issueType>ThresholdViolation</issueType>-->
+                            <!--</exclude>-->
+                        <!--</excludes>-->
+                    <!--</failSet>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>create-report</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
