--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mobiquity.test</groupId>
-  <artifactId>SpringExample</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>SpringExample</name>
-  <url>http://maven.apache.org</url>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.mobiquity.test</groupId>
+    <artifactId>SpringExample</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>SpringExample</name>
+    <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
@@ -37,65 +37,25 @@
 
     <build>
         <plugins>
-            <!--<plugin>-->
-                <!--<groupId>com.hello2morrow.sonargraph</groupId>-->
-                <!--<artifactId>maven-sonargraph-plugin</artifactId>-->
-                <!--<version>7.2.0</version>-->
-                <!--<configuration>-->
-                    <!--&lt;!&ndash; configuration properties are described below - -->
-                    <!--none is mandatory &ndash;&gt;-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>architect-report-verify</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-                <!--<groupId>com.hello2morrow</groupId>-->
-                <!--<artifactId>sonargraph-maven-plugin</artifactId>-->
-                <!--<version>7.2.3</version>-->
-                <!--<configuration>-->
-                    <!--<installationDirectory>../..</installationDirectory>-->
-                    <!--<systemDirectory>${basedir}/SpringExample.sonargraph</systemDirectory>-->
-                    <!--<failSet>-->
-                        <!--<failOnEmptyWorkspace>false</failOnEmptyWorkspace>-->
-                        <!--<includes>-->
-                            <!--<include>-->
-                                <!--<issueType>any</issueType>-->
-                                <!--<severity>error</severity>-->
-                                <!--<resolution>none</resolution>-->
-                            <!--</include>-->
-                            <!--<include>-->
-                                <!--<issueType>ArchitectureViolation</issueType>-->
-                            <!--</include>-->
-                            <!--<include>-->
-                                <!--<issueType>any</issueType>-->
-                                <!--<severity>warning</severity>-->
-                            <!--</include>-->
-                        <!--</includes>-->
-                        <!--<excludes>-->
-                            <!--<exclude>-->
-                                <!--<issueType>ScriptCompilationError</issueType>-->
-                                <!--<resolution>none</resolution>-->
-                            <!--</exclude>-->
-                            <!--<exclude>-->
-                                <!--<issueType>ThresholdViolation</issueType>-->
-                            <!--</exclude>-->
-                        <!--</excludes>-->
-                    <!--</failSet>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<goals>-->
-                            <!--<goal>create-report</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.6.201602180812</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
